# raycasting_fun

./: .gitignore  CMakeLists.txt  Makefile
data/: map0.data
editor/: CMakeLists.txt  main.c
include/: debug.h  entity.h  map.h  minimap.h  player.h  renderer.h  tables.h  vector.h
libs/follia/core/: fl_system.h
src/: _entity.c  debug.c  main.c  main_old.c  map.c  minimap.c  renderer.c  tables.c
